--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "proxy multiple http or https requests, and response the result array by combine all the result.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --reporter spec"
   },
   "repository": {
     "type": "git",
@@ -15,10 +15,18 @@
     "api",
     "combo"
   ],
+  "engineStrict": true,
+  "engines": {
+    "node": ">=4.0.0"
+  },
   "author": "yss",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/yss/node-api-combo/issues"
   },
-  "homepage": "https://github.com/yss/node-api-combo#readme"
+  "homepage": "https://github.com/yss/node-api-combo#readme",
+  "devDependencies": {
+    "mocha": "~3.4.2",
+    "should": "~11.2.1"
+  }
 }
