--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "proxy multiple http or https requests, and response the result array by combine all the result.",
   "main": "index.js",
   "scripts": {
+    "prepublish": "eslint .",
     "test": "mocha --reporter spec"
   },
   "repository": {
@@ -30,6 +31,8 @@
   },
   "homepage": "https://github.com/yss/node-api-combo#readme",
   "devDependencies": {
+    "eslint": "=4.6.1",
+    "eslint-plugin-jsdoc": "=3.1.2",
     "mocha": "~3.4.2",
     "should": "~11.2.1"
   }
