--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koa-api-combo",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "description": "proxy multiple http or https requests, and response the result array by combine all the result.",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yss/node-api-combo.git"
+    "url": "git+https://github.com/yss/koa-api-combo.git"
   },
   "keywords": [
     "koa",
@@ -27,9 +27,9 @@
   "author": "yss",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/yss/node-api-combo/issues"
+    "url": "https://github.com/yss/koa-api-combo/issues"
   },
-  "homepage": "https://github.com/yss/node-api-combo#readme",
+  "homepage": "https://github.com/yss/koa-api-combo#readme",
   "devDependencies": {
     "eslint": "=4.6.1",
     "eslint-plugin-jsdoc": "=3.1.2",
