--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "=4.6.1",
     "eslint-plugin-jsdoc": "=3.1.2",
     "mocha": "~3.4.2",
-    "should": "~11.2.1"
+    "should": "~11.2.1",
+    "static-server": "=2.2.1"
   }
 }
